// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components: Expandable Accordion renders 1`] = `
<Fragment>
  <h2
    id="accordion"
  >
    Accordion
  </h2>
  <p>
    If you use a wrapper with 
    <Property
      value=".accordion"
    />
     then only one expandable can be open at the same time.
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <div
      className="accordion"
    >
      <Expandable
        items={
          Array [
            Object {
              "content": "Esse est enim Lorem amet ut consequat ut. Cillum esse labore sint mollit est sint sint. Lorem esse labore sint non elit laborum. Ipsum nostrud cupidatat ipsum elit irure elit fugiat. Culpa proident commodo id minim enim.",
              "subtitle": "My subtitle",
              "title": "My title",
            },
            Object {
              "content": "Incididunt nulla veniam eu irure quis excepteur irure dolor. Deserunt irure ad nulla proident commodo ea consectetur officia. Culpa esse pariatur excepteur ullamco.",
              "subtitle": "My subtitle",
              "title": "My title",
            },
            Object {
              "content": "Proident cupidatat irure excepteur id minim dolore mollit amet reprehenderit consectetur aliqua officia Lorem elit. Cupidatat ea tempor ut esse. Aliquip exercitation in nisi reprehenderit anim Lorem. Excepteur nostrud officia irure tempor aute ipsum. Voluptate nisi incididunt proident enim reprehenderit fugiat fugiat magna sit reprehenderit Lorem anim. Aute commodo cillum nisi consectetur amet eiusmod do tempor incididunt anim.",
              "subtitle": "My subtitle",
              "title": "My title",
            },
          ]
        }
      />
    </div>
  </ComponentPreview>
</Fragment>
`;

exports[`Components: Expandable Overview renders 1`] = `
<Fragment>
  <h2
    id="overview"
  >
    Overview
  </h2>
  <p>
    The expandable component shows only what is contained in the 
    <Property
      value=".expandable-header"
    />
     when it is closed. 
    <Property
      value=".expandable-content"
    />
     will be visible in its open state.
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <Expandable
      items={
        Array [
          Object {
            "content": "Esse est enim Lorem amet ut consequat ut. Cillum esse labore sint mollit est sint sint. Lorem esse labore sint non elit laborum. Ipsum nostrud cupidatat ipsum elit irure elit fugiat. Culpa proident commodo id minim enim.",
            "subtitle": "My subtitle",
            "title": "My title",
          },
          Object {
            "content": "Incididunt nulla veniam eu irure quis excepteur irure dolor. Deserunt irure ad nulla proident commodo ea consectetur officia. Culpa esse pariatur excepteur ullamco.",
            "subtitle": "My subtitle",
            "title": "My title",
          },
          Object {
            "content": "Proident cupidatat irure excepteur id minim dolore mollit amet reprehenderit consectetur aliqua officia Lorem elit. Cupidatat ea tempor ut esse. Aliquip exercitation in nisi reprehenderit anim Lorem. Excepteur nostrud officia irure tempor aute ipsum. Voluptate nisi incididunt proident enim reprehenderit fugiat fugiat magna sit reprehenderit Lorem anim. Aute commodo cillum nisi consectetur amet eiusmod do tempor incididunt anim.",
            "subtitle": "My subtitle",
            "title": "My title",
          },
        ]
      }
    />
  </ComponentPreview>
</Fragment>
`;

exports[`Components: Expandable renders 1`] = `
<DocContainer
  docToc={true}
>
  <p
    className="lead"
  >
    Accordion
  </p>
  <Overview />
  <Accordion />
</DocContainer>
`;
